<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerHorizontal="true"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <RelativeLayout
        android:background="@drawable/style_for_image"
        android:layout_gravity="center"
        android:elevation="20sp"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:layout_marginTop="20sp"
            android:layout_marginLeft="120sp"
            android:id="@+id/img_item"
            android:layout_width="120sp"
            android:layout_height="120sp"/>


        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@+id/img_item"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txt_item_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@+id/txt_item_name"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/gender"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_item_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@+id/txt_item_gender"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="20sp" />
        <TextView
            android:layout_below="@+id/txt_item_age"
            android:id="@+id/txt_item_location"
            android:textSize="15sp"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/state_and_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/txt_item_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_item_location"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:text="@string/email"
            android:textSize="15sp" />


    </RelativeLayout>



</LinearLayout>