<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/holo_blue_dark"
    app:cardUseCompatPadding="true"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="100sp"
            android:layout_height="80dp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_marginLeft="100sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="7dp">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:text="@string/state_and_city"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_phonumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_state"
                android:text="@string/phone_number"
                android:textSize="15sp" />


        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>